--- a/quiz.css
+++ b/quiz.css
@@ -180,3 +180,17 @@ h2 {
 span {
   white-space: pre-line;
 }
+#top {
+  position: fixed;
+  right: 0;
+  width: 100px;
+  height: 100px;
+  background-color: dodgerblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30px;
+  top: 605px;
+  text-decoration: none;
+  font-size: 5em;
+}
